--- a/frontend/src/components/tutoriales/tutoriales.css
+++ b/frontend/src/components/tutoriales/tutoriales.css
@@ -142,7 +142,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background: linear-gradient(to bottom, #2e7d32, #1b5e20);
+  background: linear-gradient(to bottom, #2e7d3262, #1b5e20);
   color: #f1f8e9;
   font-family: 'Segoe UI', sans-serif;
   overflow: hidden;
